--- a/Accounts/templates/login.html
+++ b/Accounts/templates/login.html
@@ -3,14 +3,20 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Login | Class Tracker</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
 
 <div class="nav">
     <div class="nav-title">Login</div>
-    <a class="nav-link" href="{% url 'register' %}">Register</a>
+    <div>
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
+        <a class="nav-link" href="{% url 'about' %}">About</a>
+        <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+        <a class="nav-link" href="{% url 'login' %}">Login</a>
+        <a class="nav-link" href="{% url 'register' %}">Register</a>
+    </div>
 </div>
 
 <div class="page">
@@ -44,6 +50,8 @@
         </form>
     </div>
 </div>
+
+{% include 'footer.html' %}
 
 </body>
 </html>
